# stela

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml  setup.sh
.github/workflows/: rust.yml
.sqlx/: query-a680d019c9bf29ad680cb65d2839f4be0218a984cc95fe3d811fc4e6bada73be.json  query-f5e730438ea827446c3b2378633e1c26e75d17f9ce3892d4f62dd5414f0099d6.json
hooks/: pre-push
migrations/: 20250422122556_init.up.sql
resources/: main.css
src/: config.rs  lib.rs  main.rs  notification.rs  persistence.rs  ui.rs
src/ui/: popup.rs  style.rs
