[package]
name = "stela"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.5", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }

futures = "0.3"

anyhow = "1.0"

gtk4 = "0.9"
gtk4-layer-shell = "0.5"

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.8", features = ["sqlite"] }
chrono = "0.4"
